Post finetuning bugs fixes (#3069)
* Add new job spacing fix

* Agents header  - extra space at the bottom - fix

* Tooltip icon alignment fix

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/agents.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/agents.scss
@@ -287,7 +287,6 @@ $arrow-color: #000;
 }
 
 .agents-table {
-  margin-bottom: 30px;
   thead {
     tr {
       background:    $table-header-bg;
